# aionatgrid

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  HIGH_SEVERITY_FIXES.md  Makefile  README.md  context7.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-submission.yml  release.yml
.serena/: project.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  exceptions.rst  getting-started.rst  index.rst  usage.rst
examples/: account-info.py  ami-usage.py  basic_usage.py  energy-usage.py  interval-reads.py  list-accounts.py
src/aionatgrid/: __init__.py  auth.py  client.py  config.py  exceptions.py  extractors.py  graphql.py  helpers.py  models.py  oidchelper.py  queries.py  rest.py  rest_queries.py
tests/: test_client.py  test_config.py  test_models.py  test_retry.py  test_typed_client.py
